--- a/001.HTML 학습/07.CGV_PJ/003.site/css/main.css
+++ b/001.HTML 학습/07.CGV_PJ/003.site/css/main.css
@@ -55,6 +55,92 @@ h1.tit{
     */
 }
 
+#screen{
+    position: absolute;
+    top: 6.3%;
+    width: 58.4%;
+    left: 21.4%;
+    height: 61.4%;
+    /* 부모는? #cont.rbx */
+    background-color: #000;
+}
+/* 스크린 아이프레임 */
+#screen iframe{
+    width: 100%;
+    height: 100%;
+    border: none;
+    /* 아이프레임 기본보더 없앰! */
+}
+
+/* 2-2. 예고편 선택메뉴 */
+.mlist{
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    /* 부모박스의 절반밀어놓고 */
+    transform: translateX(-50%);
+    /* x축방향으로 자기크기의 절반
+    왼쪽으로이동하기->가로중앙이동! */
+    width: 60%;
+
+
+}
+.mlist ul{
+    display: flex;
+}
+
+.mlist ul>li{
+    position: relative;
+    /* 부모자격 */
+    margin: 0 1%;
+    flex: 1;
+    overflow: hidden;
+    /* 넘치는 자식요소 숨기기 */
+}
+
+.mlist img{
+    width: 100%;
+    vertical-align: bottom;
+    /* 이미지 박스하단 공백 없애기! */
+}
+
+/* 영화정보박스 */
+.movtxt{
+    position: absolute;
+    top: 100%;
+    /* 아래쪽 나가있음! 오버시 0으로 올라옴! */
+    width: 100%;
+    height: 100%;
+    /* 부모는? .nav ul>li */
+    background-color: rgba(129, 115, 115, 0.508);
+    /* 반투명배경색 */
+
+    /* 글자색 */    
+    font-family: 'Cute Font', cursive;
+    font-size:min(1.3vw,14px);
+    color: #fff;
+
+    line-height: 2;
+    text-align: center;
+
+    /* 트랜지션:속시이지 */
+    transition: top .4s ease-out;
+}
+
+/* 부모li에 오버시 설명박스 올라오기 */
+.mlist ul>li:hover .movtxt{
+    top: 0;
+}
+/* 첫번째 li는 영화제목 */
+.movtxt li:first-child{
+    color: aqua;
+    font-size: min(1.4vw,17px);
+    /* min(유동사이즈,고정사이즈) 메서드 */
+    /* 1.4vw와 17px중 작은 사이즈선택! */
+    letter-spacing: -1px;
+    margin-top: 30%;
+}
+
 /************************** 3.하단영역 **************************/
 #info{
     height: 100px;
