--- a/001.HTML 학습/07.CGV_PJ/003.site/css/main.css
+++ b/001.HTML 학습/07.CGV_PJ/003.site/css/main.css
@@ -145,3 +145,22 @@ h1.tit{
 #info{
     height: 100px;
 }
+/* 3-1 회사정보 */
+#info address{
+    color: #fff;
+    font-style: normal;
+    font-family: 'Cute Font', cursive;
+    font-size: 18px;
+    line-height: 20px;
+
+    /* 안쪽여백 */
+    padding-left: 20px;
+    padding-top: 20px;
+
+}
+/* 하단로고 이미지 */
+#info img{
+    float: left;
+    /* 이미지는 왼쪽, 글자는 오른쪽에 흐르게 */
+    margin-right: 20px;
+}
