--- a/001.HTML 학습/07.CGV_PJ/003.site/css/main.css
+++ b/001.HTML 학습/07.CGV_PJ/003.site/css/main.css
@@ -11,7 +11,7 @@ body{
 }
 
 body *{
-    outline: 1px dashed #ccc;
+    /* outline: 1px dashed #ccc; */
 }
 
 /* 레이아웃 공통 class */
@@ -23,8 +23,13 @@ body *{
 }
 /************************** 1.상단영역 **************************/
 #top{
+    position: relative;
+    /* 부모자격 -gnb */
     height: 80px;
     background: url(../images/curtain.jpg) repeat;
+    z-index: 9999;
+    /* 메뉴를 포함한 부모박스의 위치를 가장높게
+    -겹치는 하위메뉴를 위에 오도록하기 위함 */
 }
 /* 1-1. 페이지타이틀 */
 h1.tit{
@@ -36,6 +41,153 @@ h1.tit{
     /* 그림자를 이용한 Glow효과 */
     text-shadow: 0 0 4px aquamarine;
 }
+
+/* 1-2 전체메뉴(gnb) */
+.gnb{
+    position: absolute;
+    bottom: -10px;
+    right: 10px;
+    /* 나의 부모? #top */
+}
+/* gnb ul */
+.glist{
+    font-family: 'Jua', sans-serif;
+    display: flex;
+    /* 플렉스 박스 */
+}
+/* GNB li 리스트 */
+.glist>li{
+    position: relative;
+    /* 상위메누 */
+    padding: 0 10px;
+    padding-bottom: 20px;
+    /* 하위메뉴와 영역이 연결되게함 */
+    font-size: 20px;
+}
+/* 서브메뉴 a에 오버시 가상요소로 이모지 보이기 */
+.glist>li:nth-child(1) .smenu li a:hover::after{
+    content: '🍕';
+    float: right;
+}
+
+/* 임시로 첫번째 .smenu만 보이게 하기 */
+/* .glist>li:first-child~li .smenu{
+    display: none;
+} */
+
+/* gnb 서브메뉴 */
+.smenu{
+    position: absolute;
+    width: 140px;
+    left: 50%;
+    background: url(../images/bg_smenu.png) no-repeat center/cover;
+    padding: 3px;
+    margin-top: 5px;
+    border-radius: 5px;
+    display: none;
+    box-shadow: 0 0 5px #fff;
+    transform: translateX(-50%);
+    /* x축방향으로 자신의 크기의 절반 왼쪽이동(중앙맞춤) */
+}
+/* 상위메뉴 li에 오버시에  .smenu보임 */
+.glist>li:hover .smenu{
+    display: block;
+}
+/* 가상요소로 삼각형 만들기 */
+.smenu::before{
+    content: '';
+    display: block;
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 0;
+    border-bottom: 10px solid red;
+    border-bottom: 10px solid red;
+    /* border-top: 10px solid red; */
+    /* border-top: 10px solid red;  역삼각형  */
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    /* transparent 투명생 */
+}
+/* 서브메뉴 ol */
+.smenu ol{
+    border: 1px solid #ccc;
+    padding: 10px;
+}
+.smenu li{
+    font-size: 16px;
+    line-height: 2;
+}
+/* 서브메뉴 li중 보더탑 디자인용
+class */
+.bdt{
+    border-top: 1px solid #ccc;
+}
+/* 서브메뉴 a요소 확장 */
+.smenu a{
+    display: block;
+    /* li부모 */
+}
+
+
+/* 서브메뉴 a에 오버시 글자색 빨강 */
+.smenu a:hover{
+    color: red;
+}
+
+/* 영사기 박스 */
+#cam{
+    position: absolute;
+    bottom: 0;
+    right: -50px;
+    /* 부모는? .gnb */
+}
+/* 영사기 이미지 */
+#cam img{
+    position: relative;
+    z-index: 1;
+    /* 영사기가 빔박스보다 위에 보이게함! */
+    width: 50px;
+    /*  영사기회전 */
+    transform: rotate(25deg);
+    transition: width .5s ease-out;
+}
+/* GNB에 마우스 오버시 영사기 회전하기 */
+.gnb:hover #cam img{
+    transform: rotate(0deg);
+}
+
+
+/* 빔박스 */
+.bim{
+    position: absolute;
+    top: -17px;
+    right: 0;
+    /* 부모는? #cam */
+    width: 200px;
+    height: 70px;
+    background: url(../images/bim.png) no-repeat;
+    background-position: right center;
+    background-size: auto 100%;
+    /* 이미지의 크기를 세로에 맞춤! */
+
+    /* 트랜지션 : 소시이지 */
+    transform: width .3s linear .5s;
+}
+/* gnb 에 오버시 영사기 쏘기(width:200px) */
+.gnb:hover .bim{
+    width: 200px;
+    transition-delay: .5s;
+    /* 오버시엔 0.5초 기다려! */
+}
+.gnb:hover #cam img{
+    transform: rotate(0deg);
+    /* 트랜지션:속시이지 */
+    transition-delay: 0s;
+}
+
 /************************** 2.메인영역 **************************/
 #cont{
     /* height: 788px; */
@@ -143,6 +295,8 @@ h1.tit{
 
 /************************** 3.하단영역 **************************/
 #info{
+    position: relative;
+    /* 부모자격 - .sns */
     height: 100px;
 }
 /* 3-1 회사정보 */
@@ -163,4 +317,42 @@ h1.tit{
     float: left;
     /* 이미지는 왼쪽, 글자는 오른쪽에 흐르게 */
     margin-right: 20px;
+}
+
+/* 3-2. sns박스 */
+ul.sns{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    /* 부모는? #info */
+    display: flex;
+    /* 플렉스박스 */
+}
+.sns li{
+    width: 34px;
+    height: 34px;
+    background: url(../images/sprites_logo.png) no-repeat;
+    filter: grayscale(100%);
+    /* 필터 흙백처리 */
+}
+/* 오버시 칼라 */
+.sns li:hover{
+    filter: grayscale(0%);
+}
+
+.sns li:first-child{
+    background-position: -510px -430px;
+}
+.sns li:nth-child(2){
+    background-position: -551px -430px;
+}
+.sns li:last-child{
+    background-position: -593px -430px;
+}
+
+/* sns a링크 확장 */
+.sns a{
+    display: block;
+    width: 100%;
+    height: 100%;
 }
