--- a/001.HTML 학습/07.CGV_PJ/003.site/css/intro.css
+++ b/001.HTML 학습/07.CGV_PJ/003.site/css/intro.css
@@ -7,7 +7,8 @@
 @import url(core.css);
 
 /* 전체화면 높이값 채우기 */
-html,body{
+html,
+body {
     width: 100vw;
     height: 100vh;
     /* WIDTH, height */
@@ -15,7 +16,7 @@ html,body{
 }
 
 /* 비디오요소 */
-#myvid{
+#myvid {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -31,22 +32,44 @@ html,body{
         2.fill  : 이미지나 동영상 비율을 개고 모두 보이게
         3. contain : 
     */
-fillter:brightness(50%)
+    filter: brightness(50%)
 }
+
 /* 들어가기 버튼박스 */
-#enter{
+#enter {
     position: absolute;
     top: 50%;
     left: 50%;
-    transition: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     /* 트랜스폼으로 정중앙이동하기 */
-    outline: 4px dotted lime;
+    /* outline: 4px dotted lime; */
 }
+
 /* click here!글자박스 */
-#enter span{
+#enter span {
     display: block;
     /* 옆에 마무도못오고 width느 끝까지 간다! */
     font-family: 'Audiowide';
     text-align: center;
-    font: b;
+    font: bold 34px/1.8 'Audiowide';
+    /* 트랜지션:속시이지 */
+    transition: all .4s ease-out .2s;
+}
+
+/* 엔터박스 오버시 글자박스 변경 */
+#enter:hover span {
+    transform: scale(2);
+    color: chartreuse;
+}
+
+/* 로고이미지 */
+#enter img {
+    transition: transform .4s ease-out;
+
+}
+
+/* 엔터박스 오버시 로고이미지변경 */
+#enter:hover img {
+    transform: rotate(-15deg) scale(1.5);
+
 }
