--- a/001.HTML 학습/09.VOGUE_PJ/002.site/css/main.css
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/css/main.css
@@ -6,10 +6,13 @@
 @import url(core.css);
 
 /* 박스표시 */
-
+body *{
+    outline: 1px dashed gray;
+}
 /* 속박스 class */
 .ibx{
     max-width: 1300px;
+    margin: 0 auto;
 }
 
 /* 임시 높이값 */
