--- a/001.HTML 학습/09.VOGUE_PJ/002.site/css/core.css
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/css/core.css
@@ -1,16 +1,10 @@
 @charset "utf-8";
 
-/* CGV PJ 공통핵심 CSS - core.css */
+/* 보그 PJ 공통핵심 CSS - core.css */
 /* 웹폰트, 공용클래스 */
 
 /*************** 1.웹폰트 : CDN ***************/
-/* Cute Font, Jua, Audiowide */
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Cute+Font&family=Jua&display=swap');
-/* 
-    font-family: 'Audiowide', cursive;
-    font-family: 'Cute Font', cursive;
-    font-family: 'Jua', sans-serif;
-*/
+
 
 /************ 2.공통 class ************/
 
@@ -25,6 +19,7 @@
     content: '';
     display: block;
     /* 패딩탑값 %로 비율에 맞게 각각셋팅 */
+    padding-top: 50%;
 }
 /* 비율유지속박스 */
 .rbxIn{
@@ -34,6 +29,20 @@
     bottom: 0;
     right: 0;
 }
+
+/* 한개짜리 파티션 박스의 높이값 100% */
+.pt1 .cbx{
+    height: 100%;
+}
+/* 플렉스 박스 class */
+.fbx{
+    display: flex;
+}
+/* 플렉스 자식박스 설정 */
+.fbx .cbx{
+    flex: 1;
+}
+
 
 /* ir(image replacement) 플래스 */
 .ir{
