--- a/001.HTML 학습/07.CGV_PJ/003.site/css/main.css
+++ b/001.HTML 학습/07.CGV_PJ/003.site/css/main.css
@@ -298,18 +298,23 @@ class */
 }
 
 .mlist ul>li {
-    transform: rotateX(63deg);
-    transform-origin: bottom;
-    transition: .6s;
     position: relative;
     /* 부모자격 */
     margin: 0 1%;
     flex: 1;
     overflow: hidden;
     /* 넘치는 자식요소 숨기기 */
+
+    transform: rotateX(63deg);
+    transform-origin: bottom;
+    transition: .4s ease-out;
 }
+
+/* 클래스on일 경우 세우기 */
+
 /* li에 마우스 오버시 세우기! */
-.mlist ul>li:hover {
+.mlist ul>li:hover,
+.mlist ul>li.on{
     transform: rotateX(0deg);
     z-index: 1;
     /* 오버된 li가 항상위 */
@@ -348,6 +353,8 @@ class */
 /* 부모li에 오버시 설명박스 올라오기 */
 .mlist ul>li:hover .movtxt {
     top: 0;
+    transition-delay:.6s;
+    /* 오버시에만 트랜지션 지연시간(세운후) */
 }
 
 /* 첫번째 li는 영화제목 */
