--- a/001.HTML 학습/09.VOGUE_PJ/002.site/css/common.css
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/css/common.css
@@ -11,7 +11,74 @@
 
 .top{
     height: 206px;
+    
 }
+/* 1-1.상단메뉴 */
+.tmenu{
+    display: flex;
+    /* 플렉스박스 */
+    max-width: 982px;
+    height: 45px;
+    margin: 0 auto;
+}
+/* 직계박스 등분할 설정 */
+.tmenu>div{
+    flex: 1;
+}
+/* 1-1-1.sns 박스 */
+.sns a{
+    width: 16px;
+    height: 16px;
+    /* .fi설정에 inline-block되어 있음(크기적용됨) */
+    font-size: 16px;
+    text-align: center;
+    vertical-align: top;
+    line-height: 16px;
+    /* 위치조정 */
+    margin-top: 15px;
+    margin-right: 16px;
+    /* 트랜지션:속시이지 */
+    transition: opacity 0.2s;
+}
+/* a요소 오버시 */
+.sns a:hover
+
+
+/* 트위터 아이콘 조정 */
+.sns a.fi-twitter{
+    font-size: 13px;
+}
+/* 유튜브 아이콘 조정 */
+.sns a.fi-youtube-play{
+    font-size: 13px;
+}
+/* sns 첫번째 a요소 왼쪽밀기 */
+.sns a:first-child{
+    margin-left: 0;
+}
+.sns a:last-child{
+    display: inline-block;
+    /* 크기디자인 적용위해! */
+    background: url(../images/sns_kakao.png) no-repeat center/auto 100%;
+}
+
+/* 1-1-2.사이드메뉴 */
+.smbx{
+    display: flex;
+    justify-content: flex-end;
+    /* 플렉스 내용박스 오른쪽 끝정렬 */
+}
+/* 사이드 메뉴 상위a요소 */
+.smbx>li>a{
+    padding: 0 13px;
+    line-height: 44px;
+
+    /* 글자셋팅 */
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    color: #747474;
+}
+
 .info{
     height: 286px;
 }
