--- a/001.HTML 학습/09.VOGUE_PJ/002.site/css/common.css
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/css/common.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 /* 보그 PJ 공통 기능 디자인 css - common.css  */
-
+/* Roboto체 + Roboto Condensed체 - CDN   */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:ital,wght@1,300&display=swap');
 
 
 /* 외부파일 합치기 */
@@ -10,8 +11,9 @@
 
 
 .top{
-    height: 206px;
-    
+    min-height: 206px;
+    /* 최소높이값 설정 - 컨텐츠가 
+    많아지면 자동으로 늘어남! */
 }
 /* 1-1.상단메뉴 */
 .tmenu{
@@ -68,6 +70,13 @@
     justify-content: flex-end;
     /* 플렉스 내용박스 오른쪽 끝정렬 */
 }
+/* 메뉴사이 구분선 넣기 */
+.smbx>li:first-child{
+    border-radius: ;
+}
+
+
+
 /* 사이드 메뉴 상위a요소 */
 .smbx>li>a{
     padding: 0 13px;
@@ -77,6 +86,94 @@
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
     color: #747474;
+
+    /* 트랜지션:속시이지 */
+    transition: all .2s ease-in-out;
+}
+/* 서브메뉴  a에 마우스 오버시 */
+.smsub a:hover{
+    background-color: #fafafa;
+    color: #333;
+}
+
+/* 첫번째 사이드 메뉴 마우스 오버시 커서모양 text */
+.smbx>li:first-child>a{
+    /* 직계a로 잡을 것! 서브a엔 미적용! */
+    cursor: text;
+    /* 
+        참고)css커서 모양종류
+        https://www.w3schools.com/cssref/pr_class_cursor.asp
+    */
+}
+
+
+/* 사이드 메뉴 서브박스 */
+.smsub{
+    position: absolute;
+    border: 1px solid #e5e5e5;
+    opacity: 0;
+    /* 투명하게-오버시 트랜지션 보이기! */
+    height: 0;
+    overflow: hidden;
+    /* 높이값0에 넘치는 요소 숨기기! */
+
+}
+/* 상위메뉴 li오버시 하위메뉴 보이기 */
+.smbx>li:hover .smsub{
+    opacity: 1;
+    height: auto;
+    /* 원래자신의 높이값으로 돌아감!(트랜지션과 무관) */
+    transition: opactiy .4s ease-in-out;
+}
+
+
+/* 서브메뉴 a요소 */
+.smsub a{
+    display: block;
+    padding: 7px 10px;
+
+    /* 글자설정 */
+    font-family: nbg;
+    font-size: 12px;
+    color: #747474;
+}
+.logo{
+    text-align: center;
+}
+
+/* 1-3. gnb박스 */
+.gnb{
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 16px;
+    line-height: 40px;
+    padding: 0 30px;
+    margin-top: 11px;
+}
+.gnb>ul{
+    display: flex;
+    justify-content:center;
+    /* 컨텐츠 가로중앙 */
+    flex-wrap: wrap;
+    /* 좁아지면 자동줄바꿈 */
+}
+.gnb li{
+    padding-right: 40px;
+}
+/* 마지막 리스트 li  */
+.gnb li:last-child a{
+    font-weight: bold;
+}
+/* 마직막li는 페딩없앰 */
+.gnb li:last-child{
+    padding-right: 0;
+}
+/* gnb링크 트랜지션 */
+.gnb a{
+    transition: color .3s;
+}
+/* 링크 오버시 */
+.gnb a:hover{
+    color: red;
 }
 
 .info{
