--- a/001.HTML 학습/09.VOGUE_PJ/002.site/css/common.css
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/css/common.css
@@ -9,7 +9,17 @@
 @import url(core.css);
 @import url(common.css);
 
-
+#top{
+    position: relative;
+    /* 포지션이 있어야 z-index 적용됨 */
+    z-index: 9999;
+    box-shadow: 02px 2px rgba(0 0 0 / 12%);
+    /* rgba 색상표기 2가지
+        rgba(0, 0, 0, 0.253)
+        rgba(0 0 0 / 12%)
+    */
+    background-color: #fff;
+}
 .top{
     min-height: 206px;
     /* 최소높이값 설정 - 컨텐츠가 
@@ -19,7 +29,7 @@
 .tmenu{
     display: flex;
     /* 플렉스박스 */
-    max-width: 982px;
+    max-width: 970px
     height: 45px;
     margin: 0 auto;
 }
@@ -162,6 +172,7 @@
 /* 마지막 리스트 li  */
 .gnb li:last-child a{
     font-weight: bold;
+    padding-top: 10px;
 }
 /* 마직막li는 페딩없앰 */
 .gnb li:last-child{
@@ -175,8 +186,74 @@
 .gnb a:hover{
     color: red;
 }
-
-.info{
-    height: 286px;
+/* 슬림 스타일 상단영역 셋팅 */
+/* 상단변경은 모두 #top최상위 박스에 class="on" 이 된경우
+적용되도록 한다!!-> #top.on 하위변경 */
+/* 로고이미지 */
+#top.on .logo{
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
 }
-/* 
+/* 로고이미지 크기변경 */
+#top.on .logo img{
+    width: 100px;
+}
+/* 상단메뉴 없애기 */
+.top.on .tmenu{
+    display: none;
+}
+/* 속박스에 최소높이 없애기 */
+#top.on .top{
+    min-height: auto;
+}
+
+/* gnb 마진탑 없애기(부모박스 바깥쪽을 밀기때문!) */
+#top.on .gnb{
+    
+}
+
+
+/****************************2.하단영역****************************/
+.info{
+    min-height: 286px;
+    /* 최소 286px높이를 유지하다가
+    내용이 많아지면 늘어남 */
+    background-color: #000;
+    padding: 70px;
+    box-sizing: border-box;
+    /* 크기유지,패딩,보더포함 */
+}
+/* 3-1.하단로고 */
+.blogo{
+    text-align: center;
+}
+
+/* 3-2회사주소 */
+.addr{
+    color: #747474;
+    text-align: center;
+    font-size: 11px;
+    font-style: normal;
+    /* 이택릭해제 */
+    margin: 20px 0 0px;
+    /* 마진:위 양쪽 아래 */
+}
+/* 3-3.하단링크 */
+.blink{
+    display: flex;
+    /* 플렉스박스 */
+    flex-wrap: wrap;
+    /* 플렉스 자동줄바꿈 */
+    justify-content: center;
+    /* 가로중앙정렬 */
+}
+.blink a{
+    color: 747474px;
+    font-size: 13px;
+    margin: 0 5px;
+}
+.blink li:last-child a{
+    font-weight: bold;
+}
