--- a/9997adidas/css/main.css
+++ b/9997adidas/css/main.css
@@ -36,7 +36,7 @@ body *{
 h1.tit{
     color: aquamarine;
     font-size: 40px;
-    font-family: 'Jua', sans-serif;
+    font-family: 'Audiowide';
     text-align: center;
     line-height: 80px;
     /* 그림자를 이용한 Glow효과 */
@@ -262,12 +262,12 @@ class */
 .mlist{
     position: absolute;
     bottom: 1%;
-    left: 5%;
+    left: 0%;
     /* 부모박스의 절반밀어놓고 */
-    transform: translateX(-50%);
+    /* transform: translateX(-50%); */
     /* x축방향으로 자기크기의 절반
     왼쪽으로이동하기->가로중앙이동! */
-    width: 11%;
+    width: 14%;
 
 
 }
@@ -286,7 +286,7 @@ class */
 }
 
 .mlist img{
-    width: 100%;
+    width: 80%;
     vertical-align: bottom;
     /* 이미지 박스하단 공백 없애기! */
 }
