--- a/001.HTML 학습/09.VOGUE_PJ/002.site/css/main.css
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/css/main.css
@@ -69,5 +69,5 @@
     background-image: url(../images/cont7-2.jpg);
 }
 .bg15{
-    background-image: url(../images/cont7-3.png);
+    background-image: url(../images/cont7-3.jpg);
 }
