--- a/001.HTML 학습/09.VOGUE_PJ/002.site/css/common.css
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/css/common.css
@@ -9,7 +9,7 @@
 @import url(core.css);
 @import url(common.css);
 
-#top{
+#top {
     position: relative;
     /* 포지션이 있어야 z-index 적용됨 */
     z-index: 9999;
@@ -20,25 +20,29 @@
     */
     background-color: #fff;
 }
-.top{
+
+.top {
     min-height: 206px;
     /* 최소높이값 설정 - 컨텐츠가 
     많아지면 자동으로 늘어남! */
 }
+
 /* 1-1.상단메뉴 */
-.tmenu{
+.tmenu {
     display: flex;
     /* 플렉스박스 */
     max-width: 970px;
     height: 45px;
     margin: 0 auto;
 }
+
 /* 직계박스 등분할 설정 */
-.tmenu>div{
+.tmenu>div {
     flex: 1;
 }
+
 /* 1-1-1.sns 박스 */
-.sns a{
+.sns a {
     width: 16px;
     height: 16px;
     /* .fi설정에 inline-block되어 있음(크기적용됨) */
@@ -52,45 +56,50 @@
     /* 트랜지션:속시이지 */
     transition: opacity 0.2s;
 }
+
 /* a요소 오버시 */
-.sns a:hover{
+.sns a:hover {
     opacity: 0.8;
 }
 
 
 /* 트위터 아이콘 조정 */
-.sns a.fi-twitter{
+.sns a.fi-twitter {
     font-size: 13px;
 }
+
 /* 유튜브 아이콘 조정 */
-.sns a.fi-youtube-play{
+.sns a.fi-youtube-play {
     font-size: 13px;
 }
+
 /* sns 첫번째 a요소 왼쪽밀기 */
-.sns a:first-child{
+.sns a:first-child {
     margin-left: 0;
 }
-.sns a:last-child{
+
+.sns a:last-child {
     display: inline-block;
     /* 크기디자인 적용위해! */
     background: url(../images/sns_kakao.png) no-repeat center/auto 100%;
 }
 
 /* 1-1-2.사이드메뉴 */
-.smbx{
+.smbx {
     display: flex;
     justify-content: flex-end;
     /* 플렉스 내용박스 오른쪽 끝정렬 */
 }
+
 /* 메뉴사이 구분선 넣기 */
-.smbx>li:first-child{
+.smbx>li:first-child {
     border-right: 1px solid #e5e5e5e5;
 }
 
 
 
 /* 사이드 메뉴 상위a요소 */
-.smbx>li>a{
+.smbx>li>a {
     padding: 0 13px;
     line-height: 44px;
 
@@ -102,14 +111,15 @@
     /* 트랜지션:속시이지 */
     transition: all .2s ease-in-out;
 }
+
 /* 서브메뉴  a에 마우스 오버시 */
-.smsub a:hover{
+.smsub a:hover {
     background-color: #fafafa;
     color: #333;
 }
 
 /* 첫번째 사이드 메뉴 마우스 오버시 커서모양 text */
-.smbx>li:first-child>a{
+.smbx>li:first-child>a {
     /* 직계a로 잡을 것! 서브a엔 미적용! */
     cursor: text;
     /* 
@@ -120,7 +130,7 @@
 
 
 /* 사이드 메뉴 서브박스 */
-.smsub{
+.smsub {
     position: absolute;
     border: 1px solid #e5e5e5;
     opacity: 0;
@@ -130,8 +140,9 @@
     /* 높이값0에 넘치는 요소 숨기기! */
 
 }
+
 /* 상위메뉴 li오버시 하위메뉴 보이기 */
-.smbx>li:hover .smsub{
+.smbx>li:hover .smsub {
     opacity: 1;
     height: auto;
     /* 원래자신의 높이값으로 돌아감!(트랜지션과 무관) */
@@ -140,7 +151,7 @@
 
 
 /* 서브메뉴 a요소 */
-.smsub a{
+.smsub a {
     display: block;
     padding: 7px 10px;
 
@@ -149,50 +160,58 @@
     font-size: 12px;
     color: #747474;
 }
-.logo{
+
+.logo {
     text-align: center;
 }
 
 /* 1-3. gnb박스 */
-.gnb{
+.gnb {
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 16px;
     line-height: 40px;
     padding: 0 30px;
     margin-top: 11px;
 }
-.gnb>ul{
+
+.gnb>ul {
     display: flex;
-    justify-content:center;
+    justify-content: center;
     /* 컨텐츠 가로중앙 */
     flex-wrap: wrap;
     /* 좁아지면 자동줄바꿈 */
 }
-.gnb li{
+
+.gnb li {
     padding-right: 35px;
 }
+
 /* 마지막 리스트 li  */
-.gnb li:last-child a{
+.gnb li:last-child a {
     font-weight: bold;
     padding-top: 10px;
 }
+
 /* 마직막li는 페딩없앰 */
-.gnb li:last-child{
+.gnb li:last-child {
     padding-right: 0;
 }
+
 /* gnb링크 트랜지션 */
-.gnb a{
+.gnb a {
     transition: color .3s;
 }
+
 /* 링크 오버시 */
-.gnb a:hover{
+.gnb a:hover {
     color: red;
 }
+
 /* 슬림 스타일 상단영역 셋팅 */
 /* 상단변경은 모두 #top최상위 박스에 class="on" 이 된경우
 적용되도록 한다!!-> #top.on 하위변경 */
 
-#top.on{
+#top.on {
     position: fixed;
     top: 0;
     left: 0;
@@ -201,42 +220,46 @@
 
 
 /* 로고이미지 */
-#top.on .logo{
+#top.on .logo {
     position: absolute;
     top: 0;
     left: 0;
     padding: 10px;
 }
+
 /* 로고이미지 크기변경 */
-#top.on .logo img{
+#top.on .logo img {
     width: 100px;
     width: 50px;
 }
+
 /* 상단메뉴 없애기 */
-.top.on .tmenu{
+.top.on .tmenu {
     display: none;
 }
+
 /* 속박스에 최소높이 없애기 */
-#top.on .top{
-    min-height: auto;
+#top.on .top {
+    min-height: 50px;
 }
 
 /* gnb 마진탑 없애기(부모박스 바깥쪽을 밀기때문!) */
-#top.on .gnb{
+#top.on .gnb {
     margin-top: 0;
     font-size: 14px;
     line-height: 40px;
-    padding:5px 30px 15px 121px;
+    padding: 5px 30px 15px 121px;
     /* 기존양쪽패딩 30px 중 왼쪽만 로고만큼 더밀기 */
 }
-#top.on .gnb a{
+
+#top.on .gnb a {
     font-size: 14px;
     line-height: 50px;
     margin-top: 0;
 }
 
 /****************************2.하단영역****************************/
-.info{
+.info {
     min-height: 286px;
     /* 최소 286px높이를 유지하다가
     내용이 많아지면 늘어남 */
@@ -245,13 +268,14 @@
     box-sizing: border-box;
     /* 크기유지,패딩,보더포함 */
 }
+
 /* 3-1.하단로고 */
-.blogo{
+.blogo {
     text-align: center;
 }
 
 /* 3-2회사주소 */
-.addr{
+.addr {
     color: #747474;
     text-align: center;
     font-size: 11px;
@@ -260,8 +284,9 @@
     margin: 20px 0 0px;
     /* 마진:위 양쪽 아래 */
 }
+
 /* 3-3.하단링크 */
-.blink{
+.blink {
     display: flex;
     /* 플렉스박스 */
     flex-wrap: wrap;
@@ -269,11 +294,13 @@
     justify-content: center;
     /* 가로중앙정렬 */
 }
-.blink a{
+
+.blink a {
     color: 747474px;
     font-size: 13px;
     margin: 0 5px;
 }
-.blink li:last-child a{
+
+.blink li:last-child a {
     font-weight: bold;
 }
