--- a/0000포트폴리오/css/main.css
+++ b/0000포트폴리오/css/main.css
@@ -27,19 +27,55 @@ body *{
 
 /* 1. 상단영역 */
 .top{
+    /* position: relative; */
     background-color: #000;
     height: 54px;
 }
- .logo>ul{
-     display: flex;
- }
-.logo>ul>li img{
-    width: 70px;
-    height: 50px;
+
+.gnb img{
+    margin-bottom: -6px;
+    width: 68px;
+    height: 25px;
 }
+
 .gnb{
-    display: inline-block;
+    /* margin-right: 100px; */
+    /* position: absolute; */
+    line-height: 54px;
 }
+
+.gnb>ul{
+    margin-top: 13px;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+.gnb li a{
+    font-size: 12px;
+}
+.gnb li{
+    padding:0 20px 0 20px;
+}
+.gnb li:first-child{
+    padding:0 5px 0 5px;
+}
+.gnb li:nth-child(2){
+    padding:0 5px 0 5px;
+}
+.gnb li:nth-child(3){
+    padding:0 5px 0 5px;
+}
+.gnb li:nth-child(4){
+    padding:0 5px 0 5px;
+}
+
+
+.sideMenu>ul{
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+}
+
 
 
 /* 2. 하단영역 */
@@ -48,14 +84,60 @@ body *{
 }
 /* 3. 메인영역 */
 .cont1{
+    background: url(../images/m650-hp-banner-desktop.jpg) no-repeat center/cover;
     height: 494px;
 }
+
+.icon>img{
+    margin-top: 26px;
+    width: 125px;
+    height: 125px;
+}
+
+
 .cont2{
     height: 197px;
 }
+.iconBox{
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    width: 40%;
+}
+
+.iconBox h3{
+    font-size: 16px;
+    text-align: center;
+}
+.ibx{
+    width: 90%;
+}
+
+
+
+
 .cont3{
+
     height: 419px;
 }
+.goodsBox{
+    display: flex;
+    justify-self: center;
+    width: 100%;
+    font-size: 14px;
+    text-align: left;
+}
+.goodsBox h3{
+    font-size: 16px;
+}
+.goods>img{
+    width: 300px;
+    height: 300px;
+}
+
+
+
+
 .cont4{
     height: 500px;
 }
