--- a/0000포트폴리오/css/main.css
+++ b/0000포트폴리오/css/main.css
@@ -91,7 +91,7 @@ body *{
 .icon>img{
     margin-top: 26px;
     width: 125px;
-    height: 125px;
+    /* height: 125px; */
 }
 
 
@@ -103,6 +103,9 @@ body *{
     display: flex;
     justify-content: center;
     width: 40%;
+}
+.icon{
+    padding: 0 35px;
 }
 
 .iconBox h3{
@@ -121,18 +124,30 @@ body *{
     height: 419px;
 }
 .goodsBox{
-    display: flex;
-    justify-self: center;
+    margin: 0 auto;
     width: 100%;
     font-size: 14px;
     text-align: left;
+    display: flex;
+    justify-self: center;
+
+}
+
+.goods{
+    width: 25%;
+    margin: 50px;
+}
+
+
+.goods p{
+    font-size: 10px;
 }
 .goodsBox h3{
     font-size: 16px;
 }
 .goods>img{
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    /* height: 60%; */
 }
 
 
