--- a/001.HTML 학습/09.VOGUE_PJ/002.site/css/common.css
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/css/common.css
@@ -1,5 +1,11 @@
 @charset "utf-8";
 /* 보그 PJ 공통 기능 디자인 css - common.css  */
+
+/* 부드러운 스크롤 */
+html{
+    scroll-behavior: smooth;
+}
+
 /* Roboto체 + Roboto Condensed체 - CDN   */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:ital,wght@1,300&display=swap');
 
@@ -303,4 +309,33 @@
 
 .blink li:last-child a {
     font-weight: bold;
+}
+
+/* 위로가기 버튼 */
+.tbtn{
+    position: fixed;
+    bottom: -35px;
+    /* 처음에 아래에 나가있음 */
+    right: 75px;
+    width: 48px;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    background-color: #333;
+    border-radius: 4px 4px 0 0 ;
+    /* 둥근모서리:왼위 오른위 오른아래 왼아래 */
+    color: #fff;
+    z-index: 9999;
+    transition: background-color .3s, opacity 0.3s,bottom .001s .3s;
+    opacity: 0;/* 투명 */
+}
+/* 위로이동버튼 .on 주기 */
+.tbtn.on{
+    bottom: 0;
+    opacity: 1;/* 나타나기 */
+    transition: background-color .3s, opacity .3s;
+}
+/* 탭버튼 마우스 오버시 */
+.tbtn:hover{
+    background-color: #f00;
 }
