--- a/001.HTML 학습/09.VOGUE_PJ/002.site/css/common.css
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/css/common.css
@@ -2,9 +2,9 @@
 /* 보그 PJ 공통 기능 디자인 css - common.css  */
 
 /* 부드러운 스크롤 */
-html{
+/* html{
     scroll-behavior: smooth;
-}
+} */
 
 /* Roboto체 + Roboto Condensed체 - CDN   */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:ital,wght@1,300&display=swap');
@@ -213,56 +213,55 @@ html{
     color: red;
 }
 
-/* 슬림 스타일 상단영역 셋팅 */
-/* 상단변경은 모두 #top최상위 박스에 class="on" 이 된경우
-적용되도록 한다!!-> #top.on 하위변경 */
+/************** 슬림 스타일 상단영역 셋팅 **************/
+/* 상단변경은 모두 #top최상위 박스에 class="on"이 된경우
+적용되도록 한다!!! -> #top.on 하위변경 */
 
-#top.on {
+/* 전체 상단영역 고정하기 */
+#top.on{
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
 }
 
-
-/* 로고이미지 */
-#top.on .logo {
+/* 로고박스이동 */
+#top.on .logo{
     position: absolute;
     top: 0;
     left: 0;
     padding: 10px;
 }
-
 /* 로고이미지 크기변경 */
-#top.on .logo img {
+#top.on .logo img{
     width: 100px;
-    width: 50px;
 }
-
 /* 상단메뉴 없애기 */
-.top.on .tmenu {
+#top.on .tmenu{
     display: none;
 }
-
 /* 속박스에 최소높이 없애기 */
-#top.on .top {
+#top.on .top{
     min-height: 50px;
 }
 
-/* gnb 마진탑 없애기(부모박스 바깥쪽을 밀기때문!) */
-#top.on .gnb {
+/* GNB 마진탑 없애기(부모박스 바깥쪽을 밀기때문!) */
+#top.on .gnb{
     margin-top: 0;
     font-size: 14px;
-    line-height: 40px;
-    padding: 5px 30px 15px 121px;
-    /* 기존양쪽패딩 30px 중 왼쪽만 로고만큼 더밀기 */
+    line-height: 37px;
+    padding: 5px 30px 5px 121px;
+    /* 기존양쪽패딩 30px 중 왼쪽만 로고만큼 더 밀기 */
+}
+/* 메뉴글자색 변경 */
+#top.on .gnb a {
+    color: #333;
+}
+/* GNB li 리스트 */
+#top.on .gnb li {
+    padding-right: 35px;
 }
 
-#top.on .gnb a {
-    font-size: 14px;
-    line-height: 50px;
-    margin-top: 0;
-}
 
 /****************************2.하단영역****************************/
 .info {
