--- a/0000포트폴리오/css/main.css
+++ b/0000포트폴리오/css/main.css
@@ -192,3 +192,16 @@ body *{
 .cont6{
     height: 80px;
 }
+.sns a {
+    width: 16px;
+    height: 16px;
+    /* .fi설정에 inline-block되어 있음(크기적용됨) */
+    font-size: 16px;
+    text-align: center;
+    vertical-align: top;
+    line-height: 16px;
+    /* 위치조정 */
+    margin-top: 15px;
+    margin-right: 16px;
+    color: #000;
+    }
