--- a/0000포트폴리오/css/main.css
+++ b/0000포트폴리오/css/main.css
@@ -75,10 +75,7 @@ body *{
 
 
 
-/* 2. 하단영역 */
-.info{
-    height: 396px;
-}
+
 /* 3. 메인영역 */
 .slideBox{
     background: url(../images/3786860.jpg) no-repeat center/cover;
@@ -209,3 +206,23 @@ body *{
     color: #000;
 }
    
+/* 2. 하단영역 */
+.info{
+    width: 90%;
+    height: 396px;
+}
+.blink{
+    margin: 0 auto;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+
+}
+/* .blink ul{
+    text-align-last: left;
+} */
+.blink a{
+    font-size: 16px;
+    /* text-align: center; */
+    color: #000;
+}
